--- a/docs/README.org
+++ b/docs/README.org
@@ -37,7 +37,7 @@ Move cursor to ~chatu~ line, and invoke ~chatu-add~ to add image,
 
 ~chatu~ line means different in orgmode and markdown:
 - =#+chatu: :drawio= or =#+chatu: :plantuml= in orgmode
-- =<~-- :drawio -->= or =<~-- #+chatu: :plantuml -->= in markdown
+- =<-- :drawio -->= or =<-- #+chatu: :plantuml -->= in markdown
 
 *Remind!*
 - the input files should be the first parameter, for example, .drawio
@@ -124,4 +124,8 @@ markdown-mode:
 #+end_src
 
 * Contributors
-[[https://github.com/kimim/chatu/graphs/contributors][https://contrib.rocks/image?repo=kimim/chatu]]
+#+begin_export html
+<a href = "https://github.com/kimim/chatu/graphs/contributors">
+  <img src = "https://contrib.rocks/image?repo=kimim/chatu"/>
+</a>
+#+end_export
