--- a/docs/chatu.org
+++ b/docs/chatu.org
@@ -33,6 +33,10 @@ Even more specific about input-dir, output-dir and output file name:
 [[file:./draws_out/gnu.svg]]
 
 
+* LaTeX
+#+chatu: :latex "latex"
+[[file:./draws_out/latex.svg]]
+
 * R
 #+chatu: :R "chart-r"
 [[file:./draws_out/chart-r.svg]]
